openmediavault (0.2.6.3) stable; urgency=low

  * Fix various bugs
  * Fix config import issues (e.g. Mantis 0000143)
  * Fix bug when running RSync job in WebGUI
  * Mantis 0000340: Apache and SuExec used as Global

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Dec 2011 01:59:34 +0100

openmediavault (0.2.6.2) stable; urgency=low

  * Enable/disable sending email to administrator with rsync cron job output
  * Run a hourly cron job to flush mail queue if email notification is disabled
  * Mantis 0000330: Cron jobs are not executed

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 23 Dec 2011 01:57:19 +0100

openmediavault (0.2.6.1) stable; urgency=low

  * Fix bug in postfix configuration. Emails where send to sender instead of
    primary/secondary recipient.
  * Execute the cron job command in a shell when pressing the 'Run' button
    in the WebGUI.
  * Fix bugs in omv-initfs script and RPC backend
  * Enable/disable sending email of cron job output to user
  * Mantis 0000322: Have the option to set SSL certs path for email accounts
    (eliminates the postfix error being logged). By default the file
    /etc/ssl/certs/ca-certificates.crt which contains all trusted CA
    certificates is used by postfix. Use update-ca-certificates when adding
    a new CA certificate. The postfix configuration can be modified by the
    environment variables OMV_POSTFIX_SMTP_TLS_CAFILE and
    OMV_POSTFIX_SMTP_TLS_CAPATH.
  * Mantis 0000325: All files deleted after deleting FTP share

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Dec 2011 16:22:25 +0100

openmediavault (0.2.6.0) stable; urgency=low

  * Fix various bugs.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 Dec 2011 19:51:55 +0100

openmediavault (0.2.5.9) stable; urgency=low

  * Configure catch-all entry for hostname in /etc/postfix/generic. Thus all
    emails send via mail command should use the configured sender address.
