@@ -66,7 +66,7 @@ xmlstarlet sel -t -m "//webadmin" \
 xmlstarlet sel -t -m "//webadmin" \
   -i "enablessl[. = '1']" \
 	  -v "concat('&lt;VirtualHost *:',sslport,'&gt;')" -n \
-	  -o "    Include ${OMV_APACHE2_WEBGUI_CONFIG_DIR}/*" -n \
+	  -o "    Include ${OMV_APACHE2_WEBGUI_CONFIG_DIR}/*.conf" -n \
 	  -o "    SSLEngine on" -n \
 	  -v "concat('    SSLCertificateFile ${OMV_CERTIFICATE_DIR}/certs/',sslcertificateref,'.crt')" -n \
 	  -v "concat('    SSLCertificateKeyFile ${OMV_CERTIFICATE_DIR}/private/',sslcertificateref,'.key')" -n \
@@ -74,7 +74,7 @@ xmlstarlet sel -t -m "//webadmin" \
   -b \
   -i "enablessl[. = '0'] or forcesslonly[. = '0']" \
 	  -v "concat('&lt;VirtualHost *:',port,'&gt;')" -n \
-	  -o "    Include ${OMV_APACHE2_WEBGUI_CONFIG_DIR}/*" -n \
+	  -o "    Include ${OMV_APACHE2_WEBGUI_CONFIG_DIR}/*.conf" -n \
 	  -o "    SSLEngine off" -n \
 	  -o "&lt;/Virtualhost&gt;" \
   -b \
