@@ -1,8 +1,10 @@
 openmediavault (0.2.6.3) stable; urgency=low
 
+  * Create public/private SSH key pair during package installation
   * Fix various bugs
   * Fix config import issues (e.g. Mantis 0000143)
   * Fix bug when running RSync job in WebGUI
+  * Mantis 0000339: Rsync Remote Push Places script in wrong directory
   * Mantis 0000340: Apache and SuExec used as Global
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Dec 2011 01:59:34 +0100
